Pass objective function as argument

--- a/lincoa/src/Makefile
+++ b/lincoa/src/Makefile
@@ -11,16 +11,16 @@ lincoa-f2c: lincoa-f2c.o lincoa.h
 lincoa-f2c.o: lincoa-f2c.c lincoa.h
 	$(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $@
 
-lincoa: lincoa.o lincoa.h
-	$(CC) $(CPPFLAGS) $(CFLAGS) $< -o $@ -lm
-
 lincoa.o: lincoa.c lincoa.h
 	$(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $@
 
-lincoa-test: lincoa-test.c lincoa.o lincoa.h
-	$(CC) $(CPPFLAGS) $(CFLAGS) $< lincoa.o -o $@ -lm
+lincoa-test: lincoa-test.o lincoa.h
+	$(CC) $(CPPFLAGS) $(CFLAGS) $< -o $@ -lm
 
-lincoa.out: lincoa
+lincoa-test.o: lincoa.c lincoa.h
+	$(CC) -DTESTING=1 $(CPPFLAGS) $(CFLAGS) -c $< -o $@
+
+lincoa-test.out: lincoa-test
 	./$< | sed 's/\([0-9]\)[eE]\([-+]\?[0-9]\)/\1D\2/g' >$@
 
 lincoa-f2c.out: lincoa-f2c
